--- a/popup.css
+++ b/popup.css
@@ -17,7 +17,8 @@ body, ul, li, input, button {
 }
 #aside-left {
     display: flex;
-    justify-content: center;
+    flex-direction: column;
+    /*justify-content: center;*/
     margin-right: 10px;
     min-width: 90px;
 }
